<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.presentation.ui.home.view.HomeActivity">

    <View
        app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/appBlue" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:text="@string/jose_da_silva_teste_texto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logout_btn"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/logout"
        android:layout_marginEnd="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/textUser"
        app:layout_constraintTop_toTopOf="@+id/textUser"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textUser"
        app:layout_constraintTop_toBottomOf="@+id/textUser"
        android:text="@string/conta_texto" />


    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/conta_txt_layout"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/txtDescricao"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao" />


    <TextView
        android:id="@+id/labelBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/saldo"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtAccount" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/balance_text"
        android:layout_marginTop="7dp"
        android:paddingBottom="17dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/labelBalance"
        app:layout_constraintTop_toBottomOf="@+id/labelBalance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBalance"
        android:background="@color/color_FEFEFE" />

    <TextView
        android:id="@+id/balanceRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recentes"
        android:layout_marginTop="14dp"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/txtBalance"
        android:textColor="@color/color_485465"
        app:layout_constraintTop_toBottomOf="@+id/txtBalance" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerStatements"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceRecent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>