<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.presentation.ui.login.view.AuthActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>

    <EditText
        android:id="@+id/loginUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/shape_borda"
        android:layout_marginTop="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/user">
    </EditText>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:background="@drawable/shape_borda"
        android:inputType="textPassword"
        android:layout_marginTop="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        app:layout_constraintTop_toBottomOf="@+id/loginUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="52dp"
        android:textSize="16sp"
        app:backgroundTint="@color/appBlue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/viewFocused"
        android:background="@android:color/black"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoadingLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="gone"
        app:constraint_referenced_ids="pbLoadingLogin,viewFocused">

    </androidx.constraintlayout.widget.Group>

</androidx.constraintlayout.widget.ConstraintLayout>